--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,11 +6,16 @@
     RewriteEngine On
 
     # Redirect Trailing Slashes If Not A Folder...
+
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
+
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
     RewriteRule ^ index.php [L]
 </IfModule>
